tests/baselines/reference/generatorInAmbientContext6.errors.txt
generatorInAmbientContext6.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== generatorInAmbientContext6.ts (1 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export function *generator(): any { }
    }